--- a/package.json
+++ b/package.json
@@ -1,34 +1,50 @@
 {
-    "name": "lru-cache-js",
-    "description": "A  module implementing an LRU cache factory",
-    "main": "./lib/lru_cache",
-    "author": {
-        "name": "Ali Ismael"
-    },
-    "version": "0.4.2",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/gaaiatinc/lru-cache-js.git"
-    },
-    "engines": {
-        "node": ">=0.10.0"
-    },
-    "license": "Apache-2.0",
-    "bugs": {
-        "url": "https://github.com/gaaiatinc/lru-cache-js.git"
-    },
-    "homepage": "https://github.com/gaaiatinc/lru-cache-js",
-    "keywords": [
-        "lru",
-        "cache"
-    ],
-    "devDependencies": {
-        "mocha": "^3.0.2"
-    },
-    "scripts": {
-        "test": "nodeunit test/test-lru_cache.js"
-    },
-    "readme": "https://raw.github.com/gaaiatinc/lru-cache-js/master/README.md",
-    "readmeFilename": "README.md",
-    "dependencies": {}
+  "name": "lru-cache-js",
+  "version": "1.0.1",
+  "description": "A  module implementing an LRU cache factory",
+  "main": "./lib/LRUCache",
+  "author": {
+    "name": "Ali Ismael"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gaaiatinc/lru-cache-js.git"
+  },
+  "engines": {
+    "node": ">=4.0.0"
+  },
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/gaaiatinc/lru-cache-js.git"
+  },
+  "homepage": "https://github.com/gaaiatinc/lru-cache-js",
+  "keywords": [
+    "lru",
+    "cache"
+  ],
+  "devDependencies": {
+    "eslint": "^3.14.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "mocha": "^3.2.0"
+  },
+  "scripts": {
+    "test": "nodeunit test/test-lru_cache.js"
+  },
+  "readme": "https://raw.github.com/gaaiatinc/lru-cache-js/master/README.md",
+  "readmeFilename": "README.md",
+  "dependencies": {
+    "object-hash": "^1.1.5"
+  }
 }
